[gd_scene load_steps=15 format=3 uid="uid://n4a5a725gm4i"]

[ext_resource type="Script" uid="uid://buk6jf2jqsfds" path="res://Scripts/main_scene.gd" id="1_52fb6"]
[ext_resource type="PackedScene" uid="uid://yhgdkf382kyd" path="res://Scenes/Entities/Player/player.tscn" id="2_6l7je"]
[ext_resource type="PackedScene" uid="uid://cx1de7w36qmt8" path="res://Scenes/WorldGeneration/world_generator.tscn" id="2_x6ack"]
[ext_resource type="Script" uid="uid://byia02abo8lt1" path="res://Scripts/camera_3d.gd" id="3_jv6wh"]
[ext_resource type="PackedScene" uid="uid://cjt5stunsk46j" path="res://Scenes/Entities/Monsters/Spawners/base_mushroom_spawner.tscn" id="5_6ev3c"]
[ext_resource type="PackedScene" uid="uid://d3btayj38g7lf" path="res://Scenes/Entities/Monsters/Spawners/base_glub_spawner.tscn" id="6_maf8m"]
[ext_resource type="PackedScene" uid="uid://bryw66u65160x" path="res://Scenes/UI/Game/xpbar.tscn" id="7_maf8m"]
[ext_resource type="PackedScene" uid="uid://cchkwteosg6bu" path="res://Scenes/UI/Game/LevelUpUI/level_up.tscn" id="8_huasi"]
[ext_resource type="PackedScene" uid="uid://bcsoofaq512km" path="res://Scenes/UI/Game/ScoresUI/enemies_count.tscn" id="9_m1efj"]
[ext_resource type="PackedScene" uid="uid://6xqqsn6kt2v3" path="res://Scenes/UI/Game/ScoresUI/score_ui.tscn" id="10_mai8y"]
[ext_resource type="PackedScene" uid="uid://bvp8v3iwdlwad" path="res://Scenes/UI/Game/game_over.tscn" id="11_76v2p"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jv6wh"]

[sub_resource type="Sky" id="Sky_x6ack"]
sky_material = SubResource("ProceduralSkyMaterial_jv6wh")

[sub_resource type="Environment" id="Environment_iacmt"]
background_mode = 2
sky = SubResource("Sky_x6ack")
tonemap_mode = 2

[node name="main_scene" type="Node3D"]
script = ExtResource("1_52fb6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_iacmt")

[node name="WorldGenerator" parent="." instance=ExtResource("2_x6ack")]

[node name="Player" parent="." instance=ExtResource("2_6l7je")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
script = ExtResource("3_jv6wh")
offset = Vector3(0, 11, 11)

[node name="BaseMushroomSpawner" parent="." instance=ExtResource("5_6ev3c")]

[node name="BaseGlubSpawner" parent="." instance=ExtResource("6_maf8m")]

[node name="Xpbar" parent="." instance=ExtResource("7_maf8m")]

[node name="LevelUp" parent="." instance=ExtResource("8_huasi")]
visible = false

[node name="EnemiesCount" parent="." instance=ExtResource("9_m1efj")]
mouse_filter = 2

[node name="ScoreUi" parent="." instance=ExtResource("10_mai8y")]
mouse_filter = 2

[node name="GameOver" parent="." instance=ExtResource("11_76v2p")]
visible = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
